--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ tqdm = "^4.66.1"
 torch = "^2.1.1"
 pandas = "^2.2.2"
 dill = "^0.3.8"
+ipython = "^8.23.0"
+ipykernel = "^6.29.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
