add custom dataset

--- a/.gitignore
+++ b/.gitignore
@@ -272,4 +272,8 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+# data
+data/WIDER_FACE
+data/CUSTOM_FACE
+
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,pycharm+all
