--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,14 +15,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 numpy = "^1.26.4"
-scikit-learn = "^1.3.2"
-matplotlib = "^3.8.2"
+pandas = "^2.2.2"
 tqdm = "^4.66.1"
 torch = "^2.1.1"
-pandas = "^2.2.2"
-dill = "^0.3.8"
-ipython = "^8.23.0"
-ipykernel = "^6.29.4"
+opencv-python = "^4.9.0.80"
+datasets = "^2.19.1"
+jupyter = "^1.0.0"
+matplotlib = "^3.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
