--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ opencv-python = "^4.9.0.80"
 datasets = "^2.19.1"
 jupyter = "^1.0.0"
 matplotlib = "^3.9.0"
+map-boxes = "^1.0.6"
+optuna = "^3.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
