--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ jupyter = "^1.0.0"
 matplotlib = "^3.9.0"
 map-boxes = "^1.0.6"
 optuna = "^3.6.1"
+torchvision = "^0.18.0"
+albumentations = "^1.4.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
