--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -1,18 +1,18 @@
 FROM nvcr.io/nvidia/tritonserver:23.04-py3
 
-WORKDIR /model
+WORKDIR /app
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends
+    apt-get install -y --no-install-recommends && \
+    pip install --no-cache-dir torch torchvision
 
-COPY docker/backend/requirements.txt .
+RUN mkdir -p blur/backend/retinaface && \
+    mkdir -p blur/backend/triton
 
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
+COPY blur/backend /app/blur/backend
 
 EXPOSE 8001
 EXPOSE 8002
 EXPOSE 8003
 
-#CMD ["tritonserver", "--model-repository=/models/blur/backend/triton"]
+#CMD ["tritonserver", "--model-repository=/app/blur/backend/triton/models"]
