--- a/blur/frontend/Dockerfile
+++ b/blur/frontend/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY blur/frontend/requirements.txt .
+COPY requirements.txt /app/requirements.txt
 
 RUN python -m pip install --no-cache-dir -r requirements.txt
 
-COPY blur/frontend /app
+COPY . /app/
 
 EXPOSE 8080
 
