--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,22 @@ services:
     image: blur-frontend:0.1.0
 
   blur-backend:
-    image: nvcr.io/nvidia/tritonserver:23.04-py3
-    container_name: triton_back
-    runtime: nvidia
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - capabilities: [gpu]
+    build:
+      context: .
+      dockerfile: docker/backend/Dockerfile
     ports:
       - "8000:8000"
       - "8001:8001"
       - "8002:8002"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     volumes:
       - ./ml_server_triton/models:/models
-    command: ["tritonserver", "--model-repository=/models"]
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+    image: blur-backend:0.1.0
