make back & front pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -275,5 +275,6 @@ pyrightconfig.json
 # data
 data/WIDER_FACE
 data/CUSTOM_FACE
+.idea
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,pycharm+all
