--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "AAA ML Blur project"
+name = "blur"
 version = "0.1.0"
 description = "Тема: 04. Background Blur / Crop / Face Blur / Замена Фона"
 authors = [
@@ -7,10 +7,6 @@ authors = [
     "Yaroslav Nikolaev <yarik.nikk@mail.ru>",
     "Donskoi Andrei <donskoi.ae@gmail.com>",
 ]
-packages = [
-    { include = "blur/backend", from = "." },
-]
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -33,7 +29,7 @@ pylint = "^3.1.0"
 flake8 = "^7.0.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
