--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,23 +9,23 @@ services:
       - "8080:8080"
     image: blur-frontend:0.1.0
 
-  blur-backend:
-    build:
-      context: .
-      dockerfile: docker/backend/Dockerfile
-    ports:
-      - "8000:8000"
-      - "8001:8001"
-      - "8002:8002"
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
-    volumes:
-      - ./ml_server_triton/models:/models
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-    image: blur-backend:0.1.0
+#  blur-backend:
+#    build:
+#      context: .
+#      dockerfile: docker/backend/Dockerfile
+#    ports:
+#      - "8000:8000"
+#      - "8001:8001"
+#      - "8002:8002"
+#    deploy:
+#      resources:
+#        reservations:
+#          devices:
+#            - driver: nvidia
+#              count: 1
+#              capabilities: [gpu]
+#    volumes:
+#      - ./ml_server_triton/models:/models
+#    environment:
+#      - NVIDIA_VISIBLE_DEVICES=all
+#    image: blur-backend:0.1.0
