--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -2,12 +2,24 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
+# Dependencies
 COPY blur/frontend/requirements.txt .
+RUN python -m pip install -r requirements.txt
 
-RUN python -m pip install --no-cache-dir -r requirements.txt
+RUN mkdir -p /app/blur/backend/retinaface && \
+    mkdir -p /app/blur/frontend
 
+# Frontend part
 COPY blur/frontend /app
+
+# Backend part
+COPY blur/backend/retinaface /app/blur/backend/retinaface
+COPY blur/backend/config.py /app/blur/backend/
+
+COPY setup.py .
+RUN python -m pip install -e .
 
 EXPOSE 8080
 
-CMD ["python", "run.py"]
+#CMD ["python", "run.py"]
+
