--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
     "Yaroslav Nikolaev <yarik.nikk@mail.ru>",
     "Donskoi Andrei <donskoi.ae@gmail.com>",
 ]
+packages = [{include = "blur"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
