--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -9,17 +9,10 @@ RUN python -m pip install -r requirements.txt
 RUN mkdir -p /app/blur/backend/retinaface && \
     mkdir -p /app/blur/frontend
 
-# Frontend part
 COPY blur/frontend /app
 
-# Backend part
-COPY blur/backend/retinaface /app/blur/backend/retinaface
-COPY blur/backend/config.py /app/blur/backend/
-
-COPY setup.py .
-RUN python -m pip install -e .
+COPY blur/processor_utils.py /app/blur/
 
 EXPOSE 8080
 
 CMD ["python", "run.py"]
-
