fix frontend container

--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -9,10 +9,14 @@ RUN python -m pip install -r requirements.txt
 RUN mkdir -p /app/blur/backend/retinaface && \
     mkdir -p /app/blur/frontend
 
-COPY blur/frontend /app
+COPY blur/frontend /app/blur/frontend/
 
 COPY blur/processor_utils.py /app/blur/
 
+COPY setup.py .
+
+RUN python -m pip install -e .
+
 EXPOSE 8080
 
-CMD ["python", "run.py"]
+CMD ["python", "/app/blur/frontend/run.py"]
